--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -13,7 +13,7 @@
     <string name="clear_cache_and_index_title">Lokalen Cache und Index löschen?</string>
     <string name="clear_cache_and_index_body">Gesamten lokalen Cache und Index löschen?</string>
     <string name="index_update_progress_label">Index Aktualisierung für Ordner %1$s, %2$d %% synchronisiert</string>
-    <string name="loading_config_starting_syncthing_client">Konfiguartion wird geladen, Syncthing wird gestartet...</string>
+    <string name="loading_config_starting_syncthing_client">Konfiguartion wird geladen, Syncthing wird gestartet…</string>
     <string name="last_modified_time">Zuletzt modifiziert: %1$s</string>
     <string name="remove_device_title">Gerät %1$s entfernen?</string>
     <string name="remove_device_message">Gerät %1$s von der Liste der bekannten Geräte entfernen?</string>
