--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -15,7 +15,7 @@
     <string name="clear_cache_and_index_title">¿Borrar la caché local y el índice?</string>
     <string name="clear_cache_and_index_body">¿Borrar todos los datos de la caché local y los datos de índice?</string>
     <string name="index_update_progress_label">Actualización del índice de las carpetas %1$s, %2$d%% sincronizado</string>
-    <string name="loading_config_starting_syncthing_client">Cargando configuración, iniciando el cliente de sincronización....</string>
+    <string name="loading_config_starting_syncthing_client">Cargando configuración, iniciando el cliente de sincronización….</string>
     <string name="last_modified_time">Última modificación: %1$s</string>
     <string name="remove_device_title">¿Quitar dispositivo %1$s?</string>
     <string name="remove_device_message">¿Quitar dispositivo %1$s de la lista de dispositivos conocidos?</string>
