--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -13,7 +13,7 @@
     <string name="clear_cache_and_index_title">Cancellare la cache locale e l\'indice?</string>
     <string name="clear_cache_and_index_body">Cancellare tutti i dati della cache locale e i dati dell\'indice?</string>
     <string name="index_update_progress_label">Aggiornamento dell\'indice per la cartella %1$s, %2$d%% sincronizzato</string>
-    <string name="loading_config_starting_syncthing_client">Caricamento configurazione, avvio del client syncthing...</string>
+    <string name="loading_config_starting_syncthing_client">Caricamento configurazione, avvio del client syncthing…</string>
     <string name="last_modified_time">Ultima modifica: %1$s</string>
     <string name="remove_device_title">Rimuovere il dispositivo %1$s\?</string>
     <string name="remove_device_message">Rimuovere %1$s dalla lista dei dispositivi noti?</string>
