--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -13,7 +13,7 @@
     <string name="clear_cache_and_index_title">Limpar a cache e o índice locais?</string>
     <string name="clear_cache_and_index_body">Limpar todos os dados locais de cache e de índice?</string>
     <string name="index_update_progress_label">Índice actualizado para a pasta %1$s, %2$d%% sincronizado</string>
-    <string name="loading_config_starting_syncthing_client">Carregando a configuração, iniciando o cliente syncthing...</string>
+    <string name="loading_config_starting_syncthing_client">Carregando a configuração, iniciando o cliente syncthing…</string>
     <string name="last_modified_time">Última alteração: %1$s</string>
     <string name="remove_device_title">Remover o dispositivo %1$s\?</string>
     <string name="remove_device_message">Remover %1$s da lista de dispositivos conhecidos?</string>
