--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -13,7 +13,7 @@
     <string name="clear_cache_and_index_title">Rensa cache och index lokalt?</string>
     <string name="clear_cache_and_index_body">Rensa all cachedata och indexdata lokalt?</string>
     <string name="index_update_progress_label">Index uppdatering för mappen %1$s, %2$d%% synkroniserad</string>
-    <string name="loading_config_starting_syncthing_client">Läser in konfiguration, starta synkroniserande klient...</string>
+    <string name="loading_config_starting_syncthing_client">Läser in konfiguration, starta synkroniserande klient…</string>
     <string name="last_modified_time">Senast ändrad: %1$s</string>
     <string name="remove_device_title">Ta bort enheten %1$s\?</string>
     <string name="remove_device_message">Ta bort %1$s från listan över kända enheter?</string>
