--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,9 @@
     <string name="scan_qr_code">Scan QR code</string>
     <string name="device_id_placeholder">XXXXXXX-XXXXXXX-XXXXXXX-XXXXXXX-XXXXXXX-XXXXXXX-XXXXXXX-XXXXXXX</string>
     <string name="zxing_msg_default_status">Place a QR code inside the viewfinder rectangle to scan it.</string>
+
+    <!-- Generic texts used everywhere -->
+    <string name="back">Back</string>
     <string name="skip">Skip</string>
     <string name="next">Next</string>
     <string name="done">Done</string>
